# bips

./: .typos.toml  README.mediawiki  bip-0075.mediawiki  bip-0116.mediawiki  bip-0360.mediawiki  bip-hourglass-v2.mediawiki  bip-hourglass.mediawiki  bip-p2qrh.mediawiki  bip-p2trh.mediawiki  bip-xxxx.mediawiki
bip-0360/ref-impl/common/tests/data/: p2mr_construction.json  p2tsh_construction.json  p2tsh_pqc_construction.json
bip-0360/ref-impl/common/utils/: signet_miner_loop.sh
bip-0360/ref-impl/common/utils/workshop/: Dockerfile.bcli  Dockerfile.full
bip-0360/ref-impl/coordinate/js/: .gitignore  README.adoc  package.json
bip-0360/ref-impl/coordinate/js/src/: p2tsh-example.ts
bip-0360/ref-impl/coordinate/rust/: Cargo.toml  README.md
bip-0360/ref-impl/coordinate/rust/docs/: development_notes.adoc  p2tr-end-to-end.adoc  p2tsh-end-to-end.adoc
bip-0360/ref-impl/coordinate/rust/examples/: schnorr_example.rs  (+1 more)
bip-0360/ref-impl/js/: .gitignore  package-lock.json  package.json
bip-0360/ref-impl/js/src/: p2tsh-example.ts
bip-0360/ref-impl/rust/: Cargo.toml  README.md
bip-0360/ref-impl/rust/docs/: development_notes.adoc  p2tr-end-to-end.adoc  p2tsh-end-to-end.adoc  p2tsh-workshop.adoc  stack_element_size_performance_tests.adoc
bip-0360/ref-impl/rust/examples/: p2tr_spend.rs  p2tsh-end-to-end.sh  p2tsh_construction.rs  p2tsh_spend.rs  schnorr_example.rs  slh_dsa_verification_example.rs
bip-0360/ref-impl/rust/src/: data_structures.rs  error.rs  lib.rs
bip-0360/ref-impl/rust/tests/: p2mr_construction.rs  p2mr_spend.rs  p2tsh_spend.rs
(+5 files in other folders)
