[package]
name = "p2tsh-ref"
version = "0.1.0"
edition = "2024"

[dependencies]

# Dev version of miniscript crate re-exports bitcoin 0.32.6
miniscript = { version="13.0.0", registry="kellnr-denver-space" }

# During local dev, ensure version used here matches the version of the forked local library (referenced in:  patch.crates-io)
bitcoin = { version="0.32.6", features = ["rand-std", "serde"], registry = "kellnr-denver-space" }

bitcoinpqc = { version="0.2.0", features = ["serde"] }

env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
hex = "0.4.3"
anyhow = "1.0.98"
thiserror = "2.0.12"
rand = "0.9"

[patch.crates-io]

#bitcoin = { git = "https://github.com/jbride/rust-bitcoin.git", branch = "p2tsh" }

# Verify:
#  cargo update
#  cargo tree -p bitcoin | more
# bitcoin = { path = "./rust-bitcoin/bitcoin" }

#  cargo tree -p miniscript | more
#miniscript = { path = "./rust-miniscript" }

# bitcoinpqc = { path = "./libbitcoinpqc"  }
